<resources>
    <string name="app_name">App Portfolio</string>
    <string name="spotify_streamer">Spotify Steamer</string>
    <string name="my_nd_apps">My Nanodegree Apps!</string>
    <string name="scores_app">Scores App</string>
    <string name="capstone_app">Capstone</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="library_app">Library App</string>
</resources>
