<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/my_nd_apps"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/spotify_streamer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:background="@color/primary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/spotify_streamer"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/scores_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:background="@color/primary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/scores_app"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/library_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:background="@color/primary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/library_app"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/build_it_bigger_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:background="@color/primary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/build_it_bigger"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/xyz_reader_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:background="@color/primary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/xyz_reader"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/capstone_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:background="?attr/colorAccent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/capstone_app"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
